<?xml version="1.0"?>
<package format="3">
  <name>cartesian_impedance_controller</name>
  <version>0.1.0</version>
  <description>ROS 2 Cartesian Impedance Controller (effort-based) using Pinocchio.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>urdf</depend>
  <depend>eigen</depend>
  <depend>pinocchio</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <pluginlib plugin="${prefix}/controller_plugins.xml"/>
  </export>
</package>
